:bug: fix production issues